scope rentals list to customer and add limit param
